--- a/array/pushandpop.html
+++ b/array/pushandpop.html
@@ -7,15 +7,25 @@
     <title>Document</title>
     <script>
         var arr = [];
-        function ShowSalaries()
-        {
+        function addSalaries()
+        {            
             arr.push(document.getElementById("txt1").value)
-            console.log(arr);
+            showAll();
+                       
+        }
+        function removeSalary()
+        {
+            arr.pop();
+            showAll();
+        }
+        function showAll()
+        {
             document.getElementById("presult").innerHTML="";
-            for(var i = 0; i<arr.length;i++)
+            for(var i = arr.length-1; i>=0;i--)
             {
                 document.getElementById("presult").innerHTML+="<br>"+ arr[i];
             }
+            document.getElementById("txt1").value="";
         }
     </script>
 </head>
@@ -23,7 +33,8 @@
     <p>
         Enter Salary:
         <input type="text" id="txt1">
-        <input type="button" value="Add" onclick="ShowSalaries();">
+        <input type="button" value="Add" onclick="addSalaries();">
+        <input type="button" value="Remove" onclick="removeSalary();">
     </p>
     <p id="presult">
 
